Adding image to header

--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -8,7 +8,7 @@ type: "page"
 This page gives an overview over some talks I have done over the last years.
 I have spoken at large conferences such as QCon San Francisco, Devoxx and JavaOne, local meet-ups as well as company-internal events, covering topics such as Debezium and Change Data Capture, Bean Validation, NoSQL and more.
 
-If you'd like me to have as a speaker at your conference, please get in touch.
+If you'd like me to have as a speaker at your conference or meet-up, please get in touch.
 
 == 2019
 
