--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -10,6 +10,11 @@ I have spoken at large conferences such as QCon San Francisco, Devoxx and JavaOn
 
 If you'd like me to have as a speaker at your conference or meet-up, please get in touch.
 
+== Upcoming
+
+* JavaLand, Brühl: https://programm.javaland.eu/2020/\#/scheduledEvent/590798[Stream Processing with Quarkus, Kafka Streams and Knative]
+* Java Day Istanbul: https://javaday.istanbul/speaker/gunnar-morling/[Change Data Streaming Use Cases With Apache Kafka & Debezium]
+
 == 2019
 
 * Nordic Coding, Kiel: https://www.meetup.com/de-DE/Nordic-Coding/events/266257052/[Quarkus - Supersonic Subatomic Java]
