--- a/content/about/index.asciidoc
+++ b/content/about/index.asciidoc
@@ -10,6 +10,6 @@ I am an open-source software engineer, currently working for Red Hat, where I am
 I have been a long-time committer to multiple link:/projects[open-source projects], including Hibernate, MapStruct and Deptective;
 I also serve as the spec lead for Bean Validation 2.0 (first at the JCP, now under the Jakarta EE umbrella at the Eclipse Foundation).
 
-Named a Java Champion, I'm regularly link:/presentations[speaking] at conferences such as QCon, JavaOne, Red Hat Summit, JavaZone, JavaLand and Kafka Summit.
+Named a https://apex.oracle.com/pls/apex/f?p=19297:3::::::[Java Champion], I'm regularly link:/presentations[speaking] at conferences such as QCon, JavaOne, Red Hat Summit, JavaZone, JavaLand and Kafka Summit.
 
 Occasionally, I link:/blog[blog] about topics related to software engineering.
