--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -23,15 +23,21 @@ If you'd like me to have as a speaker at your conference or meet-up, please get 
 * JokerConf, St. Petersburg: https://2019.jokerconf.com/en/2019/talks/6nkqqv8zj4gmujxmo64ov3/[Practical change data streaming use cases with Apache Kafka and Debezium]
 * JavaZone, Oslo: https://2019.javazone.no/program/5d0b28fb-de0f-459a-9ffe-9b1c7f1423b1[Change Data Streaming For Microservices With Apache Kafka and Debezium]
 * MicroXchg, Berlin: http://microxchg.io/2019/[Change Data Streaming Patterns For Microservices With Debezium]
-* JavaLand, Brühl: https://programm.javaland.eu/2019/\#/scheduledEvent/569883[Change Data Streaming für Microservices mit Debezium]; https://programm.javaland.eu/2019/#/scheduledEvent/575382[Das Annotation Processing API - Use Cases und Best Practices]
+* JavaLand, Brühl
+  - https://programm.javaland.eu/2019/\#/scheduledEvent/569883[Change Data Streaming für Microservices mit Debezium]
+  - https://programm.javaland.eu/2019/#/scheduledEvent/575382[Das Annotation Processing API - Use Cases und Best Practices]
 * RivieraDev, Sophia Antipolis: https://2019.rivieradev.fr/session/540[Practical Change Data Streaming Use Cases With Apache Kafka and Debezium]
 * Kafka Summit London: https://kafka-summit.org/sessions/change-data-streaming-patterns-microservices-debezium-2/[Change Data Streaming Patterns For Microservices With Debezium]
-* Red Hat Summit, Boston: https://www.redhat.com/en/summit/about/session-archives[Bridging microservice boundaries with Apache Kafka and Debezium] (hands-on lab), https://www.redhat.com/en/summit/about/session-archives[Change data streaming patterns for microservices with Debezium]
+* Red Hat Summit, Boston
+  - https://www.redhat.com/en/summit/about/session-archives[Bridging microservice boundaries with Apache Kafka and Debezium] (hands-on lab)
+  - https://www.redhat.com/en/summit/about/session-archives[Change data streaming patterns for microservices with Debezium]
 * Red Hat Modern Integration and Application Development Day, Milano: https://www.redhat.com/en/events/modern-integration-and-application-development-day-milano-2019[Data Strategies for Microservices: Change Data Capture with Debezium]
 
 == 2018
 
-* Devoxx Morocco, Marrakesh: https://cfp2018.devoxx.ma/2018/talk/AEY-4477/Change_Data_Streaming_Patterns_for_Microservices_With_Debezium[Change Data Streaming Patterns for Microservices With Debezium]; https://cfp2018.devoxx.ma/2018/talk/DVH-9906/Map_me_if_you_can!_Painless_bean_mappings_with_MapStruct[Map me if you can! Painless bean mappings with MapStruct]
+* Devoxx Morocco, Marrakesh
+  - https://cfp2018.devoxx.ma/2018/talk/AEY-4477/Change_Data_Streaming_Patterns_for_Microservices_With_Debezium[Change Data Streaming Patterns for Microservices With Debezium]
+  - https://cfp2018.devoxx.ma/2018/talk/DVH-9906/Map_me_if_you_can!_Painless_bean_mappings_with_MapStruct[Map me if you can! Painless bean mappings with MapStruct]
 * Kafka Summit San Francisco: https://kafka-summit.org/sessions/change-data-streaming-patterns-microservices-debezium/[Change Data Streaming Patterns for Microservices With Debezium]
 * VoxxedDays Microservices Paris: https://voxxeddays.com/microservices/2018/06/14/gunnar-morling-on-data-streaming-with-debezium/[Data Streaming for Microservices using Debezium]
 * JUG Saxony Day, Dresden: https://www.jugsaxonyday.org/2018/wp-content/uploads/JSD2018_Programm.pdf[Streaming von Datenbankänderungen mit Debezium]
@@ -44,11 +50,17 @@ If you'd like me to have as a speaker at your conference or meet-up, please get 
 == 2017
 
 * JavaZone, Oslo: https://2017.javazone.no/program/c96ca4909bdb42eba546accfd0f21a8c[Keeping Your Data Sane with Bean Validation 2.0]
-* JavaOne, San Francisco: Keeping Your Data Sane with Bean Validation 2.0; NoSQL? Have it Your Way!
-* Devoxx Belgium, Antwerp: Streaming Database Changes with Debezium; also short talks on Bean Validation 2.0 and MapStruct
+* JavaOne, San Francisco
+  - Keeping Your Data Sane with Bean Validation 2.0
+  - NoSQL? Have it Your Way!
+* Devoxx Belgium, Antwerp
+  - Streaming Database Changes with Debezium
+  - Short talks on Bean Validation 2.0 and MapStruct
 * jdk.io, Copenhagen: https://jdk.io/jdk-io-2017/talks/188-keeping-your-data-sane-with-bean-validation-2[Keeping Your Data Sane with Bean Validation 2.0]
 * RivieraDev, Sophia Antipolis: Keeping Your Data Sane with Bean Validation 2.0
-* * JavaLand, Brühl: Bean Validation 2.0, Hibernate Search and Elasticsearch
+* JavaLand, Brühl
+  - Bean Validation 2.0
+  - Hibernate Search and Elasticsearch
 
 == 2016
 
