--- a/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
+++ b/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
@@ -64,7 +64,7 @@ GitHub Actions workflows are YAML files, because https://twitter.com/brunoborges
 ----
 name: GitHub Pages
 
-on:                                     # <1>
+on:                                              # <1>
   push:
     branches:
     - master
@@ -73,22 +73,25 @@ jobs:
   build-deploy:
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v1         # <2>
+    - uses: actions/checkout@v1                  # <2>
       with:
         submodules: true
 
-    - name: Install AsciiDoctor         # <3>
-      run: sudo apt-get install asciidoctor
+    - name: Install Ruby Dev                     # <3>
+      run: sudo apt-get install ruby-dev
 
-    - name: Setup Hugo                  # <4>
+    - name: Install AsciiDoctor and Rouge
+      run: sudo gem install asciidoctor rouge
+
+    - name: Setup Hugo                           # <4>
       uses: peaceiris/actions-hugo@v2
       with:
         hugo-version: '0.57.2'
 
-    - name: Build                       # <5>
+    - name: Build                                # <5>
       run: hugo
 
-    - name: Deploy                      # <6>
+    - name: Deploy                               # <6>
       uses: peaceiris/actions-gh-pages@v2
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
