--- a/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
+++ b/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
@@ -11,7 +11,7 @@ disqus: false
 
 As a software engineer, I like to automate tedious tasks as much as possible.
 The deployment of this website is no exception:
-it is built using the https://gohugo.io/[Hugo] static site generator and hosted on https://pages.github.com/[GitHub pages];
+it is built using the https://gohugo.io/[Hugo] static site generator and hosted on https://pages.github.com/[GitHub Pages];
 so wouldn't it be nice if the rendered website would automatically be published whenever an update is pushed to its source code repository?
 
 With the advent of https://github.com/features/actions[GitHub Actions], tasks like this can easily be implemented without having to rely on any external CI service.
@@ -100,7 +100,7 @@ jobs:
 ----
 <1> Run this action whenever changes are pushed to the _master_ branch
 <2> The first step in the job: check out the source code
-<3> Install https://asciidoctor.org/[AsciiDoctor] (in case you use Hugo with AsciiDoc files, like I do)
+<3> Install https://asciidoctor.org/[AsciiDoctor] (in case you use Hugo with AsciiDoc files, like I do) and https://github.com/rouge-ruby/rouge[Rouge], a Ruby gem for syntax highlighting; I'm installing the gems instead of Ubuntu packages in order to get current versions
 <4> Set up Hugo via the aforementioned GitHub Actions for Hugo
 <5> Run the `hugo` command; here you could add parameters such as `-F` for also building future posts
 <6> Deploy the website to GitHub pages; the contents of Hugo's build directory _public_ will be pushed to the _gh-pages_ branch of the upstream repository, using the deploy key configured before
