Summary marker, formatting

--- a/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
+++ b/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
@@ -2,7 +2,6 @@
 title: "Automatically Deploying A Hugo Website via GitHub Actions"
 date: 2019-12-26T10:00:00+01:00
 draft: false
-description: "As a software engineer, I like to automate tedious tasks as much as possible. The deployment of this website is no exception: it is built using Hugo and hosted on GitHub pages; so wouldn't it be nice if the rendered website would automatically be published whenever an update is pushed to its source code repository?"
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
@@ -11,7 +10,9 @@ description: "As a software engineer, I like to automate tedious tasks as much a
 As a software engineer, I like to automate tedious tasks as much as possible.
 The deployment of this website is no exception:
 it is built using the https://gohugo.io/[Hugo] static site generator and hosted on https://pages.github.com/[GitHub Pages];
-so wouldn't it be nice if the rendered website would automatically be published whenever an update is pushed to its source code repository?
+so would it not be nice if the rendered website would automatically be published whenever an update is pushed to its source code repository?
+
+<!--more-->
 
 With the advent of https://github.com/features/actions[GitHub Actions], tasks like this can easily be implemented without having to rely on any external CI service.
 Instead, many ready-made actions can be obtained from the https://github.com/marketplace?type=actions[GitHub marketplace] and easily be configured as per our needs.
