--- a/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
+++ b/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
@@ -10,7 +10,7 @@ draft: false
 As a software engineer, I like to automate tedious tasks as much as possible.
 The deployment of this website is no exception:
 it is built using the https://gohugo.io/[Hugo] static site generator and hosted on https://pages.github.com/[GitHub Pages];
-so would it not be nice if the rendered website would automatically be published whenever an update is pushed to its source code repository?
+so wouldn't it be nice if the rendered website would automatically be published whenever an update is pushed to its source code repository?
 
 <!--more-->
 
