Landing page improvements (proper handling of apostrophes)

--- a/content/blog/time-for-new-blog.asciidoc
+++ b/content/blog/time-for-new-blog.asciidoc
@@ -4,8 +4,8 @@ date: 2019-12-26T10:00:00+01:00
 draft: false
 ---
 
-It has been quite a while since the last post on my old [personal blog](http://musingsofaprogrammingaddict.blogspot.com/);
-since then, I've mostly focused on writing about my day-work on the [Debezium blog](https://debezium.io/blog/) as well as [some posts](https://in.relation.to/gunnar-morling/) about more general technical topics on the Hibernate team blog.
+It has been quite a while since the last post on my old http://musingsofaprogrammingaddict.blogspot.com/[personal blog];
+since then, I've mostly focused on writing about my day-work on the https://debezium.io/blog/[Debezium blog] as well as https://in.relation.to/gunnar-morling/[some posts] about more general technical topics on the Hibernate team blog.
 
 <!--more-->
 
@@ -13,8 +13,8 @@ Now recently I had some ideas for things I wanted to write about, which didn't f
 So it was time to re-boot a personal blog.
 The previous Blogger based one really, really feels outdated by now.
 Plus, I also wanted to have more control over how things work, and also be able to publish a list of projects I work on, conference talks I gave etc.
-So I decided to build the site using [Hugo](https://gohugo.io/), a static site generator, and also use a nice new shiny dev domain.
-And here we are, welcome to [morling.dev](/)!
+So I decided to build the site using https://gohugo.io/[Hugo], a static site generator, and also use a nice new shiny dev domain.
+And here we are, welcome to link:/[morling.dev]!
 
 Stay tuned for more posts every now and then about anything related to open source, the projects I work on and software engineering in general.
 Onwards!
