--- a/content/blog/quarkus-qute-test-ride.asciidoc
+++ b/content/blog/quarkus-qute-test-ride.asciidoc
@@ -447,5 +447,5 @@ Note that Qute currently is in "Experimental" state, i.e. it's a great time to g
 E.g. I noticed that complex boolean expressions in template conditions https://github.com/quarkusio/quarkus/issues/6369[aren't support yet].
 Also it would be great to get build-time feedback upon https://github.com/quarkusio/quarkus/issues/6391[invalid variable references] in templates.
 
-To learn more, refer to the Qute https://quarkus.io/guides/qute[quide] and its https://quarkus.io/guides/qute-reference[reference documentation].
+To learn more, refer to the Qute https://quarkus.io/guides/qute[guide] and its https://quarkus.io/guides/qute-reference[reference documentation].
 You can find the complete source code of the Todo example including instructions for building and running in this https://github.com/gunnarmorling/quarkus-qute[GitHub repo].
