--- a/content/podcasts/index.asciidoc
+++ b/content/podcasts/index.asciidoc
@@ -7,6 +7,7 @@ type: "page"
 
 I had the pleasure to do a few podcasts and interviews, mostly around Debezium and change data capture.
 
+* Data Engineering Podcast by Tobias Macey: https://www.dataengineeringpodcast.com/debezium-change-data-capture-episode-114/[Episode 114 -- Change Data Capture For All Of Your Databases With Debezium]; together with Randall Hauch
 * Adam Bien's airhacks.fm podcast: http://airhacks.fm/#episode_39[Episode 39 -- Use the Most Productive Stack You Can Get]
 * Adam Bien's airhacks.fm podcast: http://airhacks.fm/#episode_57[Episode 57 -- CDC, Debezium, streaming and Apache Kafka]
 * Streaming Audio: a Confluent podcast about Apache Kafka: https://www.buzzsprout.com/186154/1365043-change-data-capture-with-debezium-ft-gunnar-morling[Change Data Capture with Debezium ft. Gunnar Morling]
