--- a/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
+++ b/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
@@ -1,5 +1,5 @@
 ---
-title: "Automatically Deploying A Hugo Website via GitHub Actions"
+title: "Automatically Deploying a Hugo Website via GitHub Actions"
 date: 2019-12-26T10:00:00+01:00
 draft: false
 ---
