Avoiding need for Font Awesome

--- a/content/blog/using-java-13-text-blocks-for-tests.asciidoc
+++ b/content/blog/using-java-13-text-blocks-for-tests.asciidoc
@@ -5,7 +5,7 @@ draft: false
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
-:icons: font
+:note-caption: 💡
 
 When Java 9 was introduced in 2017,
 it was the last major version published under the old release scheme.
