--- a/content/blog/using-java-13-text-blocks-for-tests.asciidoc
+++ b/content/blog/using-java-13-text-blocks-for-tests.asciidoc
@@ -125,7 +125,8 @@ making the problem only apparent when actually running the application on the ol
 ====
 
 Build tools typically allow to use different configurations for the compilation of main and test code.
-E.g. here is what you'd use for Maven:
+E.g. here is what you'd use for Maven
+(you can find the complete source code of the example in [this GitHub repo](https://github.com/gunnarmorling/jdk13-text-blocks)):
 
 [source,xml,indent=0,linenums=true]
 ----
