--- a/content/blog/using-java-13-text-blocks-for-tests.asciidoc
+++ b/content/blog/using-java-13-text-blocks-for-tests.asciidoc
@@ -126,7 +126,7 @@ making the problem only apparent when actually running the application on the ol
 
 Build tools typically allow to use different configurations for the compilation of main and test code.
 E.g. here is what you'd use for Maven
-(you can find the complete source code of the example in [this GitHub repo](https://github.com/gunnarmorling/jdk13-text-blocks)):
+(you can find the complete source code of the example in https://github.com/gunnarmorling/jdk13-text-blocks[this GitHub repo]):
 
 [source,xml,indent=0,linenums=true]
 ----
