Update on JDK-8236597

--- a/content/blog/enforcing-java-record-invariants-with-bean-validation.asciidoc
+++ b/content/blog/enforcing-java-record-invariants-with-bean-validation.asciidoc
@@ -345,6 +345,8 @@ public record Interval(int begin, int end) {
 
 This works, but of course we're losing a bit of the conciseness promised by records.
 
+_Update, Jan 20, 2020, 20:57:_ Turns out, the current behavior indeed is _not_ intended (see https://bugs.openjdk.java.net/browse/JDK-8236597[JDK-8236597]) and in a future Java version the shorter version of the code shown above should work.
+
 == Wrap-Up
 
 In this blog post we've explored how invariants on Java 14 record types can be enforced using the Bean Validation API.
