--- a/content/blog/enforcing-java-record-invariants-with-bean-validation.asciidoc
+++ b/content/blog/enforcing-java-record-invariants-with-bean-validation.asciidoc
@@ -170,9 +170,7 @@ public class ValidationWeavingPlugin implements Plugin {
   public boolean matches(TypeDescription target) {            <1>
     return target.getDeclaredMethods()
         .stream()
-        .filter(m -> m.isConstructor() && hasConstrainedParameter(m))
-        .findFirst()
-        .isPresent();
+        .anyMatch(m -> m.isConstructor() && hasConstrainedParameter(m));
   }
 
   @Override
@@ -189,9 +187,7 @@ public class ValidationWeavingPlugin implements Plugin {
     return method.getParameters()                             <3>
         .asDefined()
         .stream()
-        .filter(p -> isConstrained(p))
-        .findFirst()
-        .isPresent();
+        .anyMatch(p -> isConstrained(p));
   }
 
   private boolean isConstrained(
